Externalize public_images controller

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1507,6 +1507,16 @@ en:
         no_user: >-
           We're sorry, that organization doesn't have a user set up to register bikes
           through. Email contact@bikeindex.org if this seems like an error.
+    public_images:
+      create:
+        cannot_create: Whoops! We can't let you create that image.
+      destroy:
+        cannot_delete: Whoops! How'd you do that? Can't delete mail snippet images.
+        image_deleted: Image was successfully deleted
+      find_image_if_owned:
+        no_permission_to_edit: Sorry! You don't have permission to edit that image.
+      update:
+        image_updated: Image was successfully updated.
     theft_alerts:
       create:
         order_is_pending: >-
