Externalize sessions_controller

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1517,6 +1517,15 @@ en:
         no_permission_to_edit: Sorry! You don't have permission to edit that image.
       update:
         image_updated: Image was successfully updated.
+    sessions:
+      create:
+        invalid_email_or_password: Invalid email/password
+        user_is_banned: >-
+          We're sorry, but it appears that your account has been locked. If you are
+          unsure as to the reasons for this, please contact us.
+      create_magic_link:
+        link_sent: Sign in link sent! Just click the link in your email to sign in
+        user_not_found: Unable to find that user
     stolen_notifications:
       create:
         failure: Crap! We couldn't send your notification. Please try again.
