Externalize integrations_controller

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1495,6 +1495,11 @@ en:
       create:
         thanks_for_your_message: Thanks for your message!
         we_will_contact_you: Thank you! We'll contact you soon.
+    integrations:
+      create:
+        problem_authenticating_with_provider: >-
+          There was a problem authenticating you with %{provider_name}. Please sign
+          in a different way or email us at contact@bikeindex.org
     organizations:
       create:
         organization_created: Organization Created successfully!
