--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1541,6 +1541,23 @@ en:
         no_user: >-
           We're sorry, that organization doesn't have a user set up to register bikes
           through. Email contact@bikeindex.org if this seems like an error.
+    ownerships:
+      no_user_flash_msg:
+        create_an_account_to_claim: >-
+          Create an account to claim that %{bike_type}! Use the email you used when
+          registering it and you will be able to claim it after signing up!
+        owner_already_has_account: >-
+          The owner of this %{bike_type} already has an account on Bike Index. Sign
+          in to claim it!
+      show:
+        no_longer_your_bike: >-
+          That used to be your %{bike_type} but isn't anymore! Contact us if this
+          doesn't make sense.
+        not_your_bike: >-
+          That doesn't appear to be your %{bike_type}! Contact us if this doesn't
+          make sense.
+        you_claimed_it: Looks like this is your %{bike_type}! Good work, you just
+          claimed it.
     public_images:
       create:
         cannot_create: Whoops! We can't let you create that image.
