Externalize users_controller

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1621,6 +1621,34 @@ en:
         email_has_been_made_primary: "%{user_email} has been made your primary email."
       resend_confirmation:
         resend_confirmation: Email confirmation re-sent
+    users:
+      confirm:
+        already_confirmed: Your user account is already confirmed. Please log in.
+      edit_templates:
+        password: Password
+        sharing: Sharing + Personal Page
+        user_settings: User Settings
+      password_reset:
+        email_not_found: Sorry, that email address isn't in our system.
+        link_no_longer_valid: We're sorry, but that link is no longer valid.
+      show:
+        user_not_sharing: Sorry, that user isn't sharing their bikes.
+      unsubscribe:
+        successfully_unsubscribed: You have been unsubscribed from Bike Index updates.
+      update:
+        accept_tos: You have to accept the Terms of Service if you would like to use
+          Bike Index.
+        accept_tos_to_use_as_org: >-
+          You have to accept the Terms of Service if you would like to use Bike Index
+          through an organization
+        current_password_doesnt_match: Current password doesn't match, it's required
+          for updating your password.
+        does_not_match_token: Doesn't match user's password reset token
+        successfully_updated: Your information was successfully updated.
+        thanks_for_accepting_tos: Thanks for accepting the terms of service!
+        token_expired: Password reset token expired, try resetting password again.
+        you_can_use_bike_index: Thanks! Now you can use Bike Index.
+        you_can_use_bike_index_as_org: Thanks! Now you can use Bike Index as %{org_name}
     welcome:
       authenticate_user_for_welcome_controller:
         create_account: Please create an account
