--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1597,6 +1597,17 @@ en:
           your_org_does_not_have_access: >-
             Your organization doesn't have access to that, please contact Bike Index
             support.
+      stickers:
+        ensure_access_to_bike_codes!:
+          org_does_not_have_access: >-
+            Your organization doesn't have access to that, please contact Bike Index
+            support.
+        find_bike_code:
+          unable_to_find_sticker: 'Unable to find sticker with code: %{bike_code}.'
+        update:
+          cannot_update: >-
+            You can't update that %{bike_code_kind}. Please contact support@bikeindex.org
+            if you think you should be able to.
       users:
         create:
           insufficient_invitations: >-
