--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1562,6 +1562,14 @@ en:
           not_a_member_of_that_org: You're not a member of that organization!
         ensure_not_ambassador_organization!:
           must_be_an_admin: You have to be an admin to do that!
+      bikes:
+        update:
+          bike_impounded: "%{bike_type} impounded!"
+          unable_to_impound: 'Unable to impound %{bike_type}: %{errors}'
+          unknown_update_action: Unknown update action. Please contact support@bikeindex.org
+          your_org_not_permitted_to_impound: >-
+            Your organization doesn't have permission to impound bikes, please contact
+            support@bikeindex.org.
       bulk_imports:
         create:
           bulk_import_created: Bulk Import created!
