Reorganize promoted alerts form, emphasize

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1005,7 +1005,7 @@ en:
       no_photos_add_photos_here_html: >-
         Uh oh. We don't have any photos of your bike available. Upload one %{link}
         to set up a promoted alert!
-      preview: Preview
+      preview: Promoted Alert Preview
       select_an_image: Select an image
       select_an_image_to_see_preview: >-
         Select an image of your bike to see a preview of what your promoted alert
